﻿The Cacti Group | spine

0.8.7f

-bug#0001465: Don't check micro version when comparing installed net-snmp version to version used when building 
-bug#0001497: Prevent constant reindexes if snmp agent continually returns uptime of 0
-bug#0001510: Speedup spine resorting hosts by estimated polling time
-bug#0001519: spine enhancement for parallel collection of data at host level
-bug#0001541: Spine snmp bulk get incorrect assumes that the server SNMP Agent returns variables in same order
-bug#0001551: Spine compile problem on AIX 5
-bug#0001563: Spine Compilation Problem on sql.c
-bug#0001604: HEX Counter values enclosed in quotes not recognized as HEX 
-bug: Add new option to enable Net-SNMP library vs. header versions
-bug: ICMP fails on some platforms
-bug: MySQL client auto reconnect default in MySQL 5.0.71 causes spine to crash
-bug: Inconsistent behavior when the poller interval has not been set
-bug: Invalid use of FDSETSIZE can cause issue with Script Server

0.8.7e
-bug: Not all configuration paths are searched for spine.conf
-bug: If host has MAX OID's set to 0, timeouts occur
-bug: Properly detect full Cygwin installs by finding sh.exe
-bug: Don't perform TCP Ping retries in Windows. You cannot set socket send timeouts in Windows

0.8.7d
-bug#0001310: Feature request for poller.php- single host polling 
-bug#0001313: Spine takes an excessive amount of time timing out failed tcp pings
-bug#0001358: (cacti + spine) svn. Using snmp v3 constantly get "value: U", whereas snmpget returns correct value 
-bug#0001379: Ping.c might send more then retry_count icmp packages
-bug#0001381: configure script distributed with cacti-spine-0.8.7c is broken 
-bug#0001420: PCOMMAND: Poller[0] Host[80] WARNING: Recache Event Detected for Host 
-bug: A host that for some reason can not initialize snmp can cause a segfault
-bug: When using nifty popen, when the script times out, attempt to kill it
-bug: Under some platforms tcp and udp ping unresponsive