@@ -1,5 +1,8 @@
 ﻿The Cacti Group | spine
 
+SVN
+-bug:0001653: Transient ICMP Socket create failures causing spine to die
+
 0.8.7f
 
 -bug#0001465: Don't check micro version when comparing installed net-snmp version to version used when building 
